lesson 7 on float

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title> Venue</title>
-    <link rel="stylesheet" href="/assets/stylesheet/main.css">
+    <link rel="stylesheet" href="assets/stylesheet/main.css">
 </head>
 <body>
-    <header>
-        <h1 >Styles Conferences </h1>
+    <header class="container">
+        <section class="container">
+            <h1 >Styles Conferences </h1>
+        </section>
  <h3> August 24&ndash; 26th &mdash; Chicago, Il</h3>
  <nav>
     <a href="index.html">Home</a>
@@ -18,38 +20,34 @@
  </nav>
 </header>
 
-<section>
+<section class="hero container">
     <h2> Dedicated to the Craft of Building Websites</h2>
-    <p>Every year the brightest web designers and front end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-    <a href="Register.html">Register Now</a>
-
+    <p>Every year the brightest web designers and front end developers descend on Chicago to discuss the latest technologies. Join us this August!     
+    </p>
+    <a href="Register.html" class="btn btn-alt">Register Now</a>
 </section>
-<section>
+<section class="container">
     <section> 
-        <div>
         <h5> Speakers</h5>
         <a href="Speakers.html">
             <img src="./assets/images/speakers.jpg" alt="speakers">
             <h3> Three Inspiring Days </h3>
         </a>
         <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories</p>
-        </div>
     </section>
 </section>
-<section>
+<section class="container">
     <section> 
-        <div>
         <h5> Schedule </h5>
         <a href="Speakers.html">
             <img src="./assets/images/schedule.jpg" alt="Schedule">
             <h3> World-Class speakers</h3>
         </a>
         <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times </p>
-        </div>
     </section>
 </section>
 <h1>welcome to register</h1>
-<footer>
+<footer class="container">
 <small>&copy; Styles Conference</small>
 <nav>
     <a href="index.html">Home</a>
