--- a/Register.html
+++ b/Register.html
@@ -7,7 +7,7 @@
     
 </head>
 <body>
-    <header>
+    <header class="container">
         <h1 >Styles Conferences </h1>
  <h3> August 24&ndash; 26th &mdash; Chicago, Il</h3>
  <nav>
@@ -17,9 +17,7 @@
     <a href="Venue.html">Venue</a>
     <a href="Register.html">Register </a>
  </nav>
-</header>
-<h1>welcome to register</h1>
-<footer>
+<footer class="container">
 <small>&copy; Styles Conference</small>
 <nav>
     <a href="index.html">Home</a>
