--- a/Speakers.html
+++ b/Speakers.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/stylesheet/main.css">
 </head>
 <body>
-    <header>
+    <header class="container">
         <div>I'm a div element</div>
         <span>I'm a span element</span>
 
@@ -20,7 +20,7 @@
  </nav>
 </header>
 <h1>welcome to register</h1>
-<footer>
+<footer class="container">
 <small>&copy; Styles Conference</small>
 <nav>
     <a href="index.html">Home</a>
