--- a/Venue.html
+++ b/Venue.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/stylesheet/main.css">
 </head>
 <body>
-    <header>
+    <header class="container">
         <h1 >Styles Conferences </h1>
  <h3> August 24&ndash; 26th &mdash; Chicago, Il</h3>
  <nav>
@@ -18,7 +18,7 @@
  </nav>
 </header>
 <h1>welcome to register</h1>
-<footer>
+<footer class="container">
 <small>&copy; Styles Conference</small>
 <nav>
     <a href="index.html">Home</a>
