--- a/index.html
+++ b/index.html
@@ -26,27 +26,31 @@
     </p>
     <a href="Register.html" class="btn btn-alt">Register Now</a>
 </section>
-<section class="container">
-    <section> 
+<section class="grid">
+    <section class="col-1-3"> 
         <h5> Speakers</h5>
         <a href="Speakers.html">
-            <img src="./assets/images/speakers.jpg" alt="speakers">
             <h3> Three Inspiring Days </h3>
         </a>
         <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories</p>
     </section>
-</section>
-<section class="container">
-    <section> 
+    <section class="col-1-3"> 
         <h5> Schedule </h5>
         <a href="Speakers.html">
-            <img src="./assets/images/schedule.jpg" alt="Schedule">
+    
+            <h3> World-Class speakers</h3>
+        </a>
+        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times </p>
+    </section>
+    <section class="col-1-3"> 
+        <h5> Schedule </h5>
+        <a href="Speakers.html">
+    
             <h3> World-Class speakers</h3>
         </a>
         <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times </p>
     </section>
 </section>
-<h1>welcome to register</h1>
 <footer class="container">
 <small>&copy; Styles Conference</small>
 <nav>
